CMBSandbox4/src/objects/HarvestProject__c.object
<CustomObject>
    <description>Project object used by the Harvest&lt;&gt;SFDC system integration when client does not already have a custom object for managing projects.  For help or more information, visit http://www.akacrm.com/salesforce/harvest2salesforce.html.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of client account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>HarvestProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_BPR_Date__c</fullName>
        <label>Actual BPR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Data_Migration_Date__c</fullName>
        <label>Actual Data Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Deployment_Date__c</fullName>
        <label>Actual Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Development_Completion_Date__c</fullName>
        <label>Actual Development Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_End_User_Training_Date__c</fullName>
        <label>Actual End User Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Minus_Estimate__c</fullName>
        <formula>IF( Monthly_Hours_Budget__c &gt;0,(Monthly_Hours_Budget__c -  Hours_to_Client_This_Month__c +  Hours_Credited_This_Month__c ) ,(
Estimated_Hours__c -    Total_Hours_to_Client__c   +  Hours_Credited__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Power_User_Training_Date__c</fullName>
        <label>Actual Power User Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Solution_Design_Date__c</fullName>
        <label>Actual Solution Design Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Solution_Design_Sign_Off_Date__c</fullName>
        <label>Actual Solution Design Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_UAT_Sign_Off_Date__c</fullName>
        <label>Actual UAT Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_vs_Estimate_Percent__c</fullName>
        <formula>If( Estimated_Hours__c&gt;0,( Estimated_Hours__c - Total_Hours_to_Client__c  ) / Estimated_Hours__c,null)</formula>
        <label>Actual vs Estimate (Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Anticipated_BPR_Date__c</fullName>
        <label>Anticipated BPR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Data_Migration_by__c</fullName>
        <label>Anticipated Data Migration by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Deployment_by__c</fullName>
        <label>Anticipated Deployment by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Development_Completion_by__c</fullName>
        <label>Anticipated Development Completion by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_End_User_Training_by__c</fullName>
        <label>Anticipated End User Training by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Power_User_Training_by__c</fullName>
        <label>Anticipated Power User Training by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Solution_Design_Sign_Off_by__c</fullName>
        <label>Anticipated Solution Design Sign Off by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Solution_Design_by__c</fullName>
        <label>Anticipated Solution Design by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Start_Date__c</fullName>
        <label>Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_UAT_Sign_Off_by__c</fullName>
        <label>Anticipated UAT Sign Off by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetIncludesProjectExpenses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If project expenses (e.g., travel) are included in the budget, then check this box.</inlineHelpText>
        <label>Budget includes project expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <inlineHelpText>How is budgeting done for this project?</inlineHelpText>
        <label>Budget</label>
        <picklist>
            <picklistValues>
                <fullName>No budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total project hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total project fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours per task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours per person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BurnPercent__c</fullName>
        <formula>if(ISPICKVAL(ProjectType__c, &quot;Monthly Support&quot;),
if(AND(Monthly_Hours_Budget__c&gt;0,Hours_This_Month__c&gt;0),((Hours_This_Month__c )/Monthly_Hours_Budget__c),0)
,if(AND(Total_Hours_to_Client__c  &gt;0,Estimated_Hours__c&gt;0),  (Total_Hours_to_Client__c )/Estimated_Hours__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time Logged / Total Hour Budget</inlineHelpText>
        <label>Burn %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Burn__c</fullName>
        <description>100 is the total max width in pixels; 15 is height in pixels.
/s.gif</description>
        <formula>if(or( ISBLANK(  Estimated_Hours__c  ) ,Estimated_Hours__c=0),&quot;No Estimate&quot;,
if(Estimated_Hours__c&gt;0,if(  (Total_Hours_to_Client__c)  /  Estimated_Hours__c  &gt; 1, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 100) ,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, ((Total_Hours_to_Client__c) / Estimated_Hours__c ) * 100) &amp; IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 100 - (((Total_Hours_to_Client__c) / Estimated_Hours__c) * 100))),&quot;&quot;)&amp;&quot; &quot;&amp;text( round(BurnPercent__c *100,0))&amp;&quot;%&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logged Hours / Budgeted Hours</inlineHelpText>
        <label>Burn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Analyst</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Business Analyst)</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>HarvestProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Text__c</fullName>
        <label>Client (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cofluence_URL__c</fullName>
        <label>Cofluence URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DateCompleted__c</fullName>
        <inlineHelpText>Date the project was completed.  Used to stop ticker on Project Days.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateStarted__c</fullName>
        <inlineHelpText>Date the project was officially started.  Used to calculate Project Days.</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastActivity__c</fullName>
        <formula>today()- LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since an activity (task, email, call notes, event, etc.) has been logged against this project</inlineHelpText>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysSinceTimeLastLogged__c</fullName>
        <formula>today()- LastTimeLogged__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since a time card has been logged.</inlineHelpText>
        <label>Days Since Time Last Logged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>The date that the project is due</inlineHelpText>
        <label>Anticipated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EarliestTimeLogged__c</fullName>
        <inlineHelpText>Date the first time card was logged.</inlineHelpText>
        <label>Earliest Time Logged</label>
        <summarizedField>HarvestTimeEntry__c.Date__c</summarizedField>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Fees__c</fullName>
        <formula>Estimated_Hours__c *  ProjectHourlyRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Hours Estimated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_Remaining__c</fullName>
        <formula>IF(  AND(
Non_Billable_State__c =false, 
Actual_Minus_Estimate__c&gt;0
),
(Actual_Minus_Estimate__c  * ProjectHourlyRate__c ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Billable__c</fullName>
        <formula>Total_Hours_to_Client__c - Hours_Credited__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total of all billable hours of the project which is incurred minus credited.</inlineHelpText>
        <label>Hours Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Credited_Previous_Month__c</fullName>
        <description>Hours credited in previous months</description>
        <inlineHelpText>Hours credited in previous months</inlineHelpText>
        <label>Hours Credited - Previous Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Credited_This_Month__c</fullName>
        <description>Hours credited this month</description>
        <label>Hours Credited - This Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Credited__c</fullName>
        <description>Hours credited where is credit is due from invoice line item</description>
        <label>Hours Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Previous_Month__c</fullName>
        <label>Hours Previous Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Snapshot__c</fullName>
        <formula>IF( 
Monthly_Hours_Budget__c &gt;0, 
IF(  Hours_This_Month__c  &gt;0,

TEXT(Hours_This_Month__c),TEXT(Total_Hours_to_Client__c)),TEXT(Total_Hours_to_Client__c) )

+ &quot; | &quot; + 

IF(
Monthly_Hours_Budget__c &gt;0,TEXT(Monthly_Hours_Budget__c),
 text(Estimated_Hours__c ) )

+ &quot; | &quot; +     

IF(
Monthly_Hours_Budget__c &gt;0, TEXT( Hours_Credited_This_Month__c ),TEXT(  Hours_Credited__c ))

+ &quot; | &quot; +     

IF(
Monthly_Hours_Budget__c &gt;0, TEXT(Monthly_Hours_Remaining__c),TEXT( Actual_Minus_Estimate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Incurred - Estimated - Remaining</inlineHelpText>
        <label>Inc. | Esti. | Cred. | Rem.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_This_Month__c</fullName>
        <label>DEPRECIATED Hours This Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_this_Month_of_Budget__c</fullName>
        <formula>Hours_to_Client_This_Month__c / Monthly_Hours_Budget__c</formula>
        <inlineHelpText>This will show how much of the monthly budget is being used</inlineHelpText>
        <label>Hours this Month % of Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hours_to_Client_This_Month__c</fullName>
        <label>Hours - This Month</label>
        <summarizedField>HarvestTimeEntry__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>HarvestTimeEntry__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2016</value>
        </summaryFilterItems>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Internal_Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Internal Advocate</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceMethod__c</fullName>
        <label>Invoice Method</label>
        <picklist>
            <picklistValues>
                <fullName>This project is not billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This project is billable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvoicedTime__c</fullName>
        <inlineHelpText>Time cards which have been marked as &quot;invoiced&quot; (lock) in Harvest.</inlineHelpText>
        <label>Invoiced Time</label>
        <summarizedField>HarvestTimeEntry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>HarvestTimeEntry__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Jira_Project_URL__c</fullName>
        <label>Jira Project URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LastHarvestSync__c</fullName>
        <label>Last Harvest Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastTimeLogged__c</fullName>
        <inlineHelpText>Most recent date of time cards logged.</inlineHelpText>
        <label>Last Time Logged</label>
        <summarizedField>HarvestTimeEntry__c.Date__c</summarizedField>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_CheckIn_Date__c</fullName>
        <label>Last CheckIn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Uninvoiced_Date__c</fullName>
        <label>Latest Uninvoiced Date</label>
        <summarizedField>HarvestTimeEntry__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>HarvestTimeEntry__c.Invoiced_by_CMB__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lock_Image__c</fullName>
        <formula>IF( Archived__c =true,

IMAGE(&quot;http://free-121d5f44d20-121d603d1c5-121ee2b8103.force.com/img/msg_icons/securityconfirm48.gif&quot;,&quot;Closed&quot;),

IMAGE(&quot;http://free-121d5f44d20-121d603d1c5-121ee2b8103.force.com/img/msg_icons/confirm32.png&quot;,&quot;Open&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open/Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCA__c</fullName>
        <formula>IF( CONTAINS( TEXT(Account__r.Industry),&quot;MCA&quot;),true,false)</formula>
        <inlineHelpText>This will be true if the industry is MCA</inlineHelpText>
        <label>MCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitor_Hours__c</fullName>
        <inlineHelpText>This will determine if the monitoring should happen on a monthly basis or by the total hours. Workflow alerts will run on this</inlineHelpText>
        <label>Monitor Hours</label>
        <picklist>
            <picklistValues>
                <fullName>By Month - Hard Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Month - Soft Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Total Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Hours_Budget__c</fullName>
        <inlineHelpText>Number of hours budgeted per month</inlineHelpText>
        <label>Monthly Hours Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Hours_Remaining__c</fullName>
        <formula>Monthly_Hours_Budget__c - Hours_This_Month__c</formula>
        <label>Monthly Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Needs_Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If project has new requirement and it needs change order.</description>
        <label>Needs Change Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoOfEntries__c</fullName>
        <inlineHelpText>number of time cards created by HarvestSync and manually.</inlineHelpText>
        <label># of Entries</label>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Billable_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Billable State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oldest_Uninvoiced_Date_This_Month__c</fullName>
        <formula>MONTH( Oldest_Uninvoiced_Date__c ) = MONTH( today())</formula>
        <inlineHelpText>This indicates if the oldest uninvoiced date is from this month. This will help determine if an invoice needs to go out</inlineHelpText>
        <label>Oldest Uninvoiced Date This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oldest_Uninvoiced_Date__c</fullName>
        <label>Oldest Uninvoiced Date</label>
        <summarizedField>HarvestTimeEntry__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>HarvestTimeEntry__c.Invoiced_by_CMB__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Hourly_Rate__c</fullName>
        <description>This is copied from the opportunity page</description>
        <formula>Opportunity__r.Hourly_Rate__c</formula>
        <label>Opportunity Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>HarvestProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentOfBudgetAlert__c</fullName>
        <inlineHelpText>If project budget reaches this percentage, send email alerts.  Leave blank to disable alerts</inlineHelpText>
        <label>% of Budget Alert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit_Dollar__c</fullName>
        <formula>Estimated_Fees__c -  Total_Contractor_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>IF(Estimated_Fees__c &lt;1,null,(Estimated_Fees__c - Total_Contractor_Cost__c) / Estimated_Fees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectCodeExternalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>If your Harvest project already has a PROJECT CODE, enter the project code here to use the code in Harvest as the external key. If you leave this field blank, then populate the Project Code in Harvest with the auto-generated Project Code from this record.</inlineHelpText>
        <label>Project Code External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectCode__c</fullName>
        <displayFormat>PID-{0}</displayFormat>
        <inlineHelpText>Auto-assigned project ID.  Used to sync to Harvest.</inlineHelpText>
        <label>Project Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProjectDays__c</fullName>
        <formula>if( ISBLANK( DateCompleted__c ) ,today()- DateStarted__c , DateCompleted__c -  DateStarted__c )</formula>
        <inlineHelpText>Days from Date Started to Dated Completed (or TODAY if project is still active)</inlineHelpText>
        <label>Project Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectHourlyRate__c</fullName>
        <inlineHelpText>If this is a billable by a project hourly rate, what is the rate?  Leave blank otherwise.</inlineHelpText>
        <label>Project Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectInvoicedBy__c</fullName>
        <inlineHelpText>If this is a billable project, how do we invoice for this project?</inlineHelpText>
        <label>Project invoiced by</label>
        <picklist>
            <controllingField>InvoiceMethod__c</controllingField>
            <picklistValues>
                <fullName>Task hourly rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person hourly rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project hourly rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not apply hourly rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectNotes__c</fullName>
        <inlineHelpText>Notes are displayed on the complete project report in Harvest and, only administrator or a project manager can see them.</inlineHelpText>
        <label>Project Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectStage__c</fullName>
        <inlineHelpText>Indicate where in the work cycle we are with this Project</inlineHelpText>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Kick Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Solution Design Sign Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Acceptance Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Custom Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundingo Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle of Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreSales (NonBillable)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Retainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Arrearage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project(1)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Checklist_URL__c</fullName>
        <label>Project Checklist URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Hour_Report_Conductor_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[time]00O60000003joc3&quot; +
&quot;&amp;queryid=[TotalHours]a1560000003ATsW&quot; + 
&quot;&amp;templateid=a0E6000000BCKSM&quot; + 
&quot;&amp;defaultpdf=true&quot; + 
&quot;&amp;emailtoid=&quot; + ClientProjectManager__c +
&quot;&amp;emailtemplateid=00X60000003HwnP&quot; + 
&quot;&amp;emailrelatedtoid=&quot; + Id + 
&quot;&amp;ofn=Project+Report+for+&quot; + Name + 
&quot;&amp;qmode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Hour Report Conductor URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Implementation_Plan_URL__c</fullName>
        <label>Project Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Pulse_Confidential__c</fullName>
        <inlineHelpText>Internal notes - confidential to sys admins</inlineHelpText>
        <label>Project Pulse - Conf.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Pulse_Status__c</fullName>
        <label>Project Pulse Status</label>
        <picklist>
            <picklistValues>
                <fullName>Healthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Pulse__c</fullName>
        <inlineHelpText>Notes on where the project is holding and any issues</inlineHelpText>
        <label>Project Pulse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_from_Opp__c</fullName>
        <formula>Opportunity__r.Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate from Opp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receives_Weekly_Report__c</fullName>
        <formula>IF(Account__r.Receives_Weekly_Report__c,1,null)</formula>
        <label>Acct Weekly Rpt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Preferences__c</fullName>
        <label>Reporting Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_Creek_Chart__c</fullName>
        <formula>IF( ISBLANK(  Estimated_Fees__c ), null, 
IMAGE( 
&quot;http://chart.apis.google.com/chart?chxr=0,0,&quot; 
&amp; TEXT(Estimated_Fees__c ) &amp; 
&quot;?chxt=y&amp;chs=300x150&amp;cht=gm&amp;chds=0,&quot; &amp; TEXT(Estimated_Fees__c ) &amp; 
&quot;&amp;chd=t:&quot; &amp; TEXT((Estimated_Fees__c -  Profit_Dollar__c )) &amp; 
&quot;&amp;chtt=Estimated+Fees+Remaining&quot; 
, &quot;Campaign Success Guage&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope Creek Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Project_Hours__c</fullName>
        <formula>IF( ISBLANK(  Estimated_Hours__c ), null, 
IMAGE( 
&quot;http://chart.apis.google.com/chart?chxr=0,0,&quot; 
&amp; TEXT(Estimated_Hours__c ) &amp; 
&quot;?chxt=y&amp;chs=300x150&amp;cht=gm&amp;chds=0,&quot; &amp; TEXT(Estimated_Hours__c ) &amp; 
&quot;&amp;chd=t:&quot; &amp; TEXT((Estimated_Hours__c  -  Total_Hours_to_Client__c )) &amp; 
&quot;&amp;chtt=Hours+Remaining: &quot; &amp; TEXT( ROUND(Actual_Minus_Estimate__c,0)) &amp;&quot;&quot;
, &quot;Project Success Gauge&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
</CustomObject>